# VizComponents

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
static/css/: style.css
test_viz_components/: apps.py  urls.py  views.py
test_viz_components/templates/: base.html  test_all.html  test_arrow.html  test_barchart.html  test_doughnut.html  test_progress.html  test_stacked_doughnut.html
viz_components/: __init__.py  apps.py  arrow.py  bar_chart.py  color_mngmnt.py  doughnut_chart.py  doughnuts.py  helpers.py  progress.py  readme.txt  stacked_doughnut_chart.py
viz_components/static/: package.json
viz_components/static/viz_components/js/: arrow.js  bar_chart.js  doughnut_chart.js  stacked_doughtnut_chart.js  viz_components.js
viz_components/templates/viz_components/: arrow.html  bar_chart.html  doughnut_chart.html  doughnuts.html  progress.html  simple_progress.html
viz_components/templates/viz_components/old/: doughnut_chart.html.old  stacked_doughnut_chart.html.old
viz_components/templatetags/: viz_component_tags.py
viz_components_project/: asgi.py  settings.py  urls.py  wsgi.py
